--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "grunt-contrib-watch": "^0.5.3",
     "grunt-contrib-sass": "^0.7.2",
     "grunt-contrib-livereload": "^0.1.2",
-    "css-parse": "^1.5.3",
     "grunt-combine-media-queries": "^1.0.15",
-    "grunt-autoprefixer": "^0.8.1"
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-autoprefixer": "^0.8.1",
+    "grunt-contrib-jade": "^0.12.0"
   }
 }
